--- a/src/main/resources/templates/header_footer/header_footer.html
+++ b/src/main/resources/templates/header_footer/header_footer.html
@@ -378,7 +378,51 @@
             integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
             crossorigin="anonymous"></script>
     <!-- Core theme JS-->
-    <script th:href="@{Js/Scripts.js}"></script>
+    <script>
+        window.addEventListener("DOMContentLoaded", (event) => {
+            // Navbar shrink function
+            var navbarShrink = function () {
+                const navbarCollapsible = document.body.querySelector("#mainNav");
+                if (!navbarCollapsible) {
+                    return;
+                }
+                if (window.scrollY === 0) {
+                    navbarCollapsible.classList.remove("navbar-shrink");
+                } else {
+                    navbarCollapsible.classList.add("navbar-shrink");
+                }
+            };
+
+            // Shrink the navbar
+            navbarShrink();
+
+            // Shrink the navbar when page is scrolled
+            document.addEventListener("scroll", navbarShrink);
+
+            //  Activate Bootstrap scrollspy on the main nav element
+            const mainNav = document.body.querySelector("#mainNav");
+            if (mainNav) {
+                new bootstrap.ScrollSpy(document.body, {
+                    target: "#mainNav",
+                    rootMargin: "0px 0px -40%",
+                });
+            }
+
+            // Collapse responsive navbar when toggler is visible
+            const navbarToggler = document.body.querySelector(".navbar-toggler");
+            const responsiveNavItems = [].slice.call(
+                document.querySelectorAll("#navbarResponsive .nav-link")
+            );
+            responsiveNavItems.map(function (responsiveNavItem) {
+                responsiveNavItem.addEventListener("click", () => {
+                    if (window.getComputedStyle(navbarToggler).display !== "none") {
+                        navbarToggler.click();
+                    }
+                });
+            });
+        });
+    </script>
+    <!-- <script th:href="@{Js/Scripts.js}"></script>-->
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
