--- a/src/main/resources/templates/header_footer/header_footer.html
+++ b/src/main/resources/templates/header_footer/header_footer.html
@@ -1,4 +1,4 @@
-<div th:fragment="Header" xmlns:th="http://www.w3.org/1999/xhtml">
+<div th:fragment="Header" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
@@ -28,6 +28,17 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link" th:href="@{/user/sign_up}">Sign Up</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link" th:href="@{/user/log_in}">Log In</a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <form th:action="@{/api/authentication/logout}" method="POST" style="display: inline;">
+                            <button type="submit" class="nav-link btn btn-link">Log Out</button>
+                        </form>
                     </li>
                 </ul>
             </div>
