--- a/src/main/resources/templates/user/log_in.html
+++ b/src/main/resources/templates/user/log_in.html
@@ -1,10 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <title th:text="${title}">title</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" th:href="@{/Images/Favicon.ico}"/>
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css"/>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous"/>
+    <link th:href="@{/Css/Styles.css}" rel="stylesheet">
 </head>
-<body>
+<body id="page-top">
+<div th:insert="~{/header_footer/header_footer.html :: Header}"></div>
+<section class="pb-2 page-section" style="background-color: rgb(158, 197, 254);">
+    <div class="container">
+        <div class="py-5 row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <form th:action="@{/api/authentication/log_in}" method="POST"
+                      enctype="multipart/form-data"
+                      class="p-4 bg-light rounded shadow needs-validation" novalidate>
+                    <h2 class="text-center mb-4">Log In Form</h2>
+                    <p class="text-center text-muted mb-4">Enter your Credentials to Access your Account.</p>
 
+                    <!--Alerts-->
+                    <div th:if="${success != null}" class="alert alert-success alert-dismissible fade show" role="alert"
+                         th:utext="${success}">
+                    </div>
+                    <div th:if="${param.error != null}" class="alert alert-danger alert-dismissible fade show"
+                         role="alert"
+                         th:utext="${error}">
+                    </div>
+
+                    <div class="form-body">
+                        <div class="row g-2">
+                            <div class="col-sm-12">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text"><i class="fa-solid fa-envelope"></i></span>
+                                    <div class="form-floating">
+                                        <input
+                                                type="email"
+                                                class="form-control"
+                                                id="UserEmail"
+                                                name="UserEmail"
+                                                placeholder="E-Mail"
+                                                autocomplete="off"
+                                                required
+                                        /> <label for="UserEmail">E-Mail</label>
+                                    </div>
+                                    <div class="invalid-feedback">Please Insert a Valid E-mail Address.</div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text"><i class="fa-solid fa-lock"></i></span>
+                                    <div class="form-floating">
+                                        <input
+                                                type="password"
+                                                class="form-control"
+                                                id="UserPassword"
+                                                name="UserPassword"
+                                                placeholder="Password"
+                                                autocomplete="off"
+                                                required
+                                        /> <label for="UserPassword">Password</label>
+                                    </div>
+                                    <div class="invalid-feedback">Please Insert your Secret Password.</div>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-row justify-content-center">
+                                <button type="submit" class="btn btn-warning btn-xl text-uppercase">Log In
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+<div th:insert="~{/header_footer/header_footer.html :: Footer}"></div>
 </body>
 </html>
