--- a/src/main/resources/templates/user/sign_up.html
+++ b/src/main/resources/templates/user/sign_up.html
@@ -226,7 +226,7 @@
                                 </div>
                             </div>
                             <div class="d-flex flex-row justify-content-center">
-                                <button type="submit" class="btn btn-warning btn-xl text-uppercase">Send Data
+                                <button type="submit" class="btn btn-warning btn-xl text-uppercase">Sign Up
                                 </button>
                             </div>
                         </div>
